[tool.poetry]
name = "fx-converter"
version = "0.1.0"
description = ""
authors = ["navaneetham-aicomputing <67477877+navaneetham-aicomputing@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.115.6"}
pytest = "^8.3.4"
httpx = "^0.28.1"
pyyaml = "^6.0.2"
uvicorn = "^0.34.0"
anyio = "^4.8.0"
pytest-asyncio = "^0.25.2"
aiomultiprocess = "^0.9.1"
numpy = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
